# metall

./: .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  CITATION.cff  CMakeLists.txt  COPYRIGHT  LICENSE-MIT  MetallConfig.h.in  README.md  mkdocs.yml
api/: _c_make_lists_8txt.html  adjacency__list_8hpp.html  adjacency__list_8hpp.js  adjacency__list_8hpp_source.html  adjacency_list_graph_8cpp-example.html  allocator_aware_type_8cpp-example.html  annotated.html  annotated_dup.js  array_8hpp.html  array_8hpp.js  array_8hpp_source.html  basic__manager_8hpp.html  basic__manager_8hpp.js  basic__manager_8hpp_source.html  c_api_8c-example.html  classadjacency__list-members.html  classadjacency__list.html  classadjacency__list.js  classcsr-members.html  classcsr.html  classcsr.js  classcsr__using__vector-members.html  classcsr__using__vector.html  classcsr__using__vector.js  classes.html  classmetall_1_1anonymous__object__attr__accessor-members.html  classmetall_1_1anonymous__object__attr__accessor.html  classmetall_1_1anonymous__object__attr__accessor.js  classmetall_1_1attraccs__detail_1_1general__named__object__attr__accessor-members.html  classmetall_1_1attraccs__detail_1_1general__named__object__attr__accessor.html  classmetall_1_1attraccs__detail_1_1general__named__object__attr__accessor.js  classmetall_1_1basic__manager-members.html  classmetall_1_1basic__manager.html  (+423 more)
bench/adjacency_list/: CMakeLists.txt  bench_driver.hpp  kernel.hpp  numa_aware_kernel.hpp  run_adj_list_backup_bench.cpp  run_adj_list_bench_bip.cpp  run_adj_list_bench_bip_extend.cpp  run_adj_list_bench_metall.cpp  run_adj_list_bench_metall_jemalloc.cpp  run_adj_list_bench_metall_numa.cpp  run_adj_list_bench_metall_snapshot.cpp  run_adj_list_bench_pmem.cpp  run_adj_list_bench_reflink_snapshot.cpp  run_adj_list_bench_stl.cpp  run_backup_bech.sh  run_bench.sh  run_inc_adj_list_backup_bench.cpp  run_inc_bench.sh  run_inc_bench_pagemap.sh  run_inc_bench_private.sh  run_inc_bench_privateer_wikipedia_snapshot_yearly.sh  run_inc_bench_shared_staging.sh  run_multi_proc_adj_list_bench_metall.cpp
bench/adjacency_list/edge_generator/: CMakeLists.txt  generate_rmat_edge_list.cpp  rmat_edge_generator.hpp
bench/adjacency_list/test/: CMakeLists.txt  compare_key_value_lists.cpp  destroy_metall.cpp  extend_metall.cpp  open_metall.cpp  test.sh  test_large.sh
bench/adjacency_list/test/data/: CMakeLists.txt
bench/adjacency_lsit/: CMakeLists.txt  bench_driver.hpp  kernel.hpp  numa_aware_kernel.hpp  run_adj_list_bench_bip.cpp  run_adj_list_bench_bip_extend.cpp  run_adj_list_bench_metall.cpp  run_adj_list_bench_metall_jemalloc.cpp  run_adj_list_bench_metall_multiple.cpp  run_adj_list_bench_metall_numa.cpp  run_adj_list_bench_stl.cpp  run_bench.sh
bench/adjacency_lsit/edge_generator/: generate_rmat_edge_list.cpp  rmat_edge_generator.hpp
bench/adjacency_lsit/test/: open_metall.cpp  test.sh  test_large.sh
bench/bfs/: CMakeLists.txt  bench_driver.hpp  kernel.hpp  run_bench.sh  run_bfs_bench_bip.cpp  run_bfs_bench_metall.cpp  run_bfs_bench_metall_multiple.cpp
bench/mmap/: CMakeLists.txt  run_many_files_mmap_bench.cpp
docs/: Doxyfile.in  (+1 more)
example/: CMakeLists.txt  README.md  adjacency_list_graph.cpp  all_methods_v0.cpp  allocator_aware_type.cpp  c_api.c  complex_map.cpp  concurrent.cpp  concurrent_map.cpp  csr_graph.cpp  custom_kernel_allocator.cpp  custom_logger.cpp  datastore_description.cpp  fallback_allocator.cpp  fallback_allocator_adaptor.cpp  logger.cpp  metall_containers.cpp  mpi_create.cpp  mpi_open.cpp  multilevel_containers.cpp  numa_allocator.hpp  object_attribute.cpp  object_attribute_api_list.cpp  offset_pointer.cpp  simple.cpp  snapshot.cpp  static_mutex.cpp  string.cpp  string_map.cpp  vector_of_vectors.cpp
example/cmake/: README.md
example/cmake/FetchContent/: CMakeLists.txt  README.md
example/cmake/find_package/: CMakeLists.txt  README.md
example/cmake/src/: c_example.c  cpp_example.cpp
example/cmake_find_package/: CMakeLists.txt  README.md
example/container/: CMakeLists.txt  string_key_store.cpp
example/container/string_container/: CMakeLists.txt  string_container.cpp
example/graph_data_structure/: adjacency_list.hpp  csr.hpp  csr_using_vector.hpp
example/json/: CMakeLists.txt  example_jgraph.cpp  example_json_create.cpp  example_json_open.cpp  jgraph.cpp  json_create.cpp  json_open.cpp  vector_of_json.cpp
src/: CMakeLists.txt  datastore_ls.cpp  metall_c.cpp  metall_c_v0.cpp  mpi_datastore_ls.cpp
test/: CMakeLists.txt  CMakeListsGTest.txt.in  gtest_main.cpp  test_utility.hpp
test/container/: CMakeLists.txt  concurrent_map_test.cpp  fallback_allocator_adaptor_test.cpp  fallback_allocator_test.cpp  stl_allocator_test.cpp  string_key_store.cpp  string_key_store_test.cpp
test/container/json/: CMakeLists.txt  json_array.cpp  json_object.cpp  json_value.cpp
test/container/string_container/: CMakeLists.txt  string_table_test.cpp
test/kernel/: CMakeLists.txt  attributed_object_directory_test.cpp  bin_directory_test.cpp  bin_manager_test.cpp  chunk_directory_test.cpp  copy_datastore_test.cpp  copy_file_test.cpp  general_object_directory_test.cpp  manager_multithread_test.cpp  manager_test.cpp  mmap_segment_storage_test.cpp  multifile_segment_storage_test.cpp  multilayer_bitset_test.cpp  multimanager_test.cpp  named_object_directory_test.cpp  object_attribute_accessor_test.cpp  object_cache_test.cpp  segment_storage_test.cpp  snapshot_test.cpp
test/utility/: CMakeLists.txt  bitset_test.cpp  free_memory_test.cpp  soft_dirty_test.cpp
test/v0/: CMakeLists.txt  bin_directory_test.cpp  bin_manager_test.cpp  chunk_directory_test.cpp  copy_file_test.cpp  manager_multithread_test.cpp  manager_test.cpp  multilayer_bitset_test.cpp  multimanager_test.cpp  named_object_directory_test.cpp  snapshot_test.cpp
tutorial/nvmw21/: CMakeLists.txt  README.md  t0.cpp  t1-1.cpp  t1-2.cpp  t2-1.cpp  t2-2.cpp  t3.cpp  t4-1.cpp  t4-1.hpp  t4-2.cpp  t4-2.hpp  t5-1.cpp  t5-2_create.cpp  t5-2_open.cpp
verification/mmap/: CMakeLists.txt  run_many_files_mmap_bench.cpp  verify_mmap.cpp  verify_mmap_openmp.cpp
(+458 files in other folders)
